<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="discover">Discover</string>
    <string name="read_more">Read More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="ahmedrapa91_gmail_com">ahmedrapa91@gmail.com</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="saved">Saved</string>
    <string name="retry">Retry</string>
    <string name="nothing_saved_yet">Nothing saved yet</string>
</resources>