<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_toolbar"
        android:elevation="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="center"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/profile" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_avatar" />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Ahmed Raba" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/LargeTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ahmedrapa91_gmail_com" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_profile_active"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/profile" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_notification"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/notifications" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_language"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/language" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LargeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_settings"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/settings" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_read_more"
        style="@style/BodyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/logout"
        app:cornerRadius="100dp"
        app:strokeColor="@color/color_primary"
        app:strokeWidth="1dp" />

</LinearLayout>